# CR-234

./: .gitattributes  .gitignore  battles.csv  cardevents.csv  country_id.csv  data_analysis.py  direct_battle_data_scrape.py  environment.yml  failed_players.csv  multiwindow.py  myGoogleAuth.json  new_scrape.py  notScrape.py  note.txt  old_new_scrape.py  package-lock.json  package.json  placement_events.csv  playwright_testing.py  progress_log.txt  replay.html  replay_cards.json  replay_full_events.csv  requirements.txt  scrape.py  scrape_no_restart.py  scraped_players.txt  structure.html  temp.py
.ssh/: authorized_keys
battle_chunks/: battles_chunk_1.csv  battles_chunk_10.csv  battles_chunk_11.csv  battles_chunk_12.csv  battles_chunk_13.csv  battles_chunk_14.csv  battles_chunk_2.csv  battles_chunk_3.csv  battles_chunk_4.csv  battles_chunk_5.csv  battles_chunk_6.csv  battles_chunk_7.csv  battles_chunk_8.csv  battles_chunk_9.csv
clans/: Afghanistan_clans.csv  Albania_clans.csv  Algeria_clans.csv  American_Samoa_clans.csv  Andorra_clans.csv  Angola_clans.csv  Anguilla_clans.csv  Antarctica_clans.csv  Antigua_and_Barbuda_clans.csv  Argentina_clans.csv  Armenia_clans.csv  Aruba_clans.csv  Ascension_Island_clans.csv  Australia_clans.csv  Austria_clans.csv  Azerbaijan_clans.csv  Bahamas_clans.csv  Bahrain_clans.csv  Bangladesh_clans.csv  Barbados_clans.csv  Belarus_clans.csv  Belgium_clans.csv  Belize_clans.csv  Benin_clans.csv  Bermuda_clans.csv  Bhutan_clans.csv  Bolivia_clans.csv  Botswana_clans.csv  (+226 more)
scraping/cr-scraper/: Cargo.toml
scraping/cr-scraper/src/: main.rs
(+198 files in other folders)
