[package]
name = "cr-scraper"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "cookies", "gzip"] }
scraper = "0.21"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
csv = "1"
clap = { version = "4", features = ["derive"] }
rand = "0.8"
parking_lot = "0.12"
indicatif = "0.17"
anyhow = "1"

[profile.release]
opt-level = 3
lto = true
